# monad-scanner

./: Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
configs/: config.example.yaml  logging.yaml
scripts/: dev_seed.py  run_local.sh
src/scanner/: logging.py  main.py  settings.py
src/scanner/analyzers/: __init__.py  base.py  conflict_patterns.py  hidden_dependencies.py  hot_state.py  ordering_sensitivity.py
src/scanner/api/: deps.py  router.py
src/scanner/api/routes/: __init__.py  blocks.py  scans.py  signals.py
src/scanner/cli/: app.py
src/scanner/db/: migrations.py  models.py  session.py
src/scanner/pipeline/: __init__.py  runner.py  scheduler.py  store.py
src/scanner/rpc/: __init__.py  jsonrpc.py  monad_client.py  types.py
src/scanner/signals/: __init__.py  explain.py  schema.py  scorer.py
src/scanner/utils/: backoff.py  hashing.py
